# inf2-material

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
cmake/: test_functions.cmake
src/examples/: CMakeLists.txt
src/examples/greet/: CMakeLists.txt  greeting.cpp  greeting.h  greeting_tests.cpp  main.cpp
src/lecture/: CMakeLists.txt
src/lecture/2025_04_04/: CMakeLists.txt  hello.cpp  print_empty_square.cpp  print_square.cpp  variables.cpp  vectors.cpp
src/lecture/2025_04_11/: CMakeLists.txt  vectors2  vectors2.cpp  vectors2.h
src/lecture/2025_04_11/find_lists/: CMakeLists.txt  find_lists.cpp  find_lists.h  find_lists_tests.cpp  main.cpp  poi.h
src/lecture/2025_04_11/vectors2/: vectors2.h
src/lecture/2025_04_25/: CMakeLists.txt
src/lecture/2025_04_25/pois/: CMakeLists.txt  poi.h  poi_tests.cpp
src/lecture/2025_04_28/: CMakeLists.txt
src/lecture/2025_04_28/quiz/: CMakeLists.txt  question.cpp  question.h  question_tests.cpp  quiz.h
